OMN2-6546 Fix image stretched on mobile

--- a/stylesheet/redem-reward-popup.css
+++ b/stylesheet/redem-reward-popup.css
@@ -137,3 +137,10 @@
 #redeem-v2 #review .email-address-info { 
     display: none;
 }
+
+@media only screen and (max-with: 748px) {
+    #redeem-v2 .left img {
+        width: 50%;
+        height: 50%;
+    }
+}
